--- a/ScrollViewApp/Base.lproj/Main.storyboard
+++ b/ScrollViewApp/Base.lproj/Main.storyboard
@@ -60,17 +60,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J0W-Ib-p90">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J0W-Ib-p90">
                                 <rect key="frame" x="20" y="20" width="560" height="560"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2N2-mf-ilU"/>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="2N2-mf-ilU" secondAttribute="bottom" id="NoD-Kd-2s9"/>
-                                    <constraint firstAttribute="trailing" secondItem="2N2-mf-ilU" secondAttribute="trailing" id="TOv-69-osz"/>
-                                    <constraint firstItem="2N2-mf-ilU" firstAttribute="leading" secondItem="J0W-Ib-p90" secondAttribute="leading" id="iU6-M4-Dt5"/>
-                                    <constraint firstItem="2N2-mf-ilU" firstAttribute="top" secondItem="J0W-Ib-p90" secondAttribute="top" id="ut3-DS-5WZ"/>
-                                </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
