--- a/ScrollViewApp/Base.lproj/Main.storyboard
+++ b/ScrollViewApp/Base.lproj/Main.storyboard
@@ -18,6 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="ofp-bC-9Sa">
+                                <rect key="frame" x="280" y="550" width="39" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="39" id="Eal-NT-JXv"/>
+                                    <constraint firstAttribute="height" constant="37" id="Jhp-VY-xBt"/>
+                                </constraints>
+                                <color key="pageIndicatorTintColor" red="0.037536777952179468" green="1" blue="0.012545997037658019" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="currentPageIndicatorTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="clickToChangePage:" destination="BYZ-38-t0r" eventType="valueChanged" id="R4M-g6-h7r"/>
+                                    <action selector="clickToChangePage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z1F-oR-ngd"/>
+                                </connections>
+                            </pageControl>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NeL-ZU-ORy">
                                 <rect key="frame" x="20" y="0.0" width="560" height="600"/>
                                 <gestureRecognizers/>
@@ -31,19 +44,7 @@
                                         <exclude reference="bSN-oY-7Q5"/>
                                     </mask>
                                 </variation>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="rHL-57-H4V" appends="YES" id="brE-DI-wEt"/>
-                                </connections>
                             </scrollView>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="ofp-bC-9Sa">
-                                <rect key="frame" x="280" y="550" width="39" height="37"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="39" id="Eal-NT-JXv"/>
-                                    <constraint firstAttribute="height" constant="37" id="Jhp-VY-xBt"/>
-                                </constraints>
-                                <color key="pageIndicatorTintColor" red="0.037536777952179468" green="1" blue="0.012545997037658019" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="currentPageIndicatorTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
